WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310514
Fix UB in equalSpans() and inconsistent null/empty semantics in CStringView
https://bugs.webkit.org/show_bug.cgi?id=310514
Summary
Fix UB in equalSpans() and inconsistent null/empty semantics in CStringView
Chris Dumez
Reported
2026-03-22 21:57:25 PDT
Fix UB in equalSpans() and inconsistent null/empty semantics in CStringView.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-03-22 22:01:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61146
EWS
Comment 2
2026-03-23 10:37:22 PDT
Committed
309766@main
(b416e36fff46): <
https://commits.webkit.org/309766@main
> Reviewed commits have been landed. Closing PR #61146 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-23 10:38:13 PDT
<
rdar://problem/173163957
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug